tests/sksl/errors/golden/FloatRemainder.glsl
### Compilation failed:

error: 6: type mismatch: '%' cannot operate on 'float', 'float'
error: 7: type mismatch: '%=' cannot operate on 'float', 'float'
2 errors
